GridSearch to determin best tree number

--- a/Process_1_Prepare_sample_point/Sub_Process_1_Create_3_year_mean_NDVI/Python_Script/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_1_Create_3_year_mean_NDVI/Python_Script/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the year range\n",
-    "year_start = [f'{i}-01-01' for i in range(1987,2020,3)]\n",
-    "year_end   = [f'{i}-12-31' for i in range(1989,2020,3)]\n",
+    "year_start = [f'{i}-01-01' for i in range(1990,2020,3)]\n",
+    "year_end   = [f'{i}-12-31' for i in range(1992,2020,3)]\n",
     "\n",
     "year_range = list(zip(year_start,year_end))\n",
     "\n",
@@ -43,14 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('1987-01-01', '1989-12-31'),\n",
-       " ('1990-01-01', '1992-12-31'),\n",
+       "[('1990-01-01', '1992-12-31'),\n",
        " ('1993-01-01', '1995-12-31'),\n",
        " ('1996-01-01', '1998-12-31'),\n",
        " ('1999-01-01', '2001-12-31'),\n",
@@ -62,7 +61,7 @@
        " ('2017-01-01', '2019-12-31')]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,10 +88,10 @@
     "\n",
     "Normalized_img = []\n",
     "            \n",
-    "            # reverse the list so we can export the recenty img first\n",
+    "# reverse the list so we can export the recenty img first\n",
     "for span in year_range[::-1]:\n",
     "    \n",
-    "    # find the end year to determine the \n",
+    "    # find the end year to determine the range_name\n",
     "    start_year = int(span[0].split('-')[0])\n",
     "    end_year   = int(span[1].split('-')[0])\n",
     "    range_name = f'{start_year}_{end_year}'\n",
@@ -217,7 +216,7 @@
    "source": [
     "for span_range,imgs in Normalized_img:\n",
     "    \n",
-    "    # define the GEE_asset path\n",
+    "    # define the GEE_asset path (Change to your own gee_asset path!)\n",
     "    path = 'users/wensomone666/Jinzhu/Mean_NDVI'\n",
     "    \n",
     "    # define the name              \n",
@@ -283,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
