--- a/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_2_GEE_Create_Sample_Point_From_50k_to_10k.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_2_GEE_Create_Sample_Point_From_50k_to_10k.ipynb
@@ -35,13 +35,49 @@
    "outputs": [],
    "source": [
     "# define the year range\n",
-    "year_start = [f'{i}-01-01' for i in range(1987,2020,3)]\n",
-    "year_end   = [f'{i}-12-31' for i in range(1989,2020,3)]\n",
+    "year_start = [f'{i}-01-01' for i in range(1990,2020,3)]\n",
+    "year_end   = [f'{i}-12-31' for i in range(1992,2020,3)]\n",
     "\n",
     "year_range = list(zip(year_start,year_end))\n",
     "\n",
     "# import some spatial constrains\n",
     "North_china_plain_boundary = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1990-01-01', '1992-12-31'),\n",
+       " ('1993-01-01', '1995-12-31'),\n",
+       " ('1996-01-01', '1998-12-31'),\n",
+       " ('1999-01-01', '2001-12-31'),\n",
+       " ('2002-01-01', '2004-12-31'),\n",
+       " ('2005-01-01', '2007-12-31'),\n",
+       " ('2008-01-01', '2010-12-31'),\n",
+       " ('2011-01-01', '2013-12-31'),\n",
+       " ('2014-01-01', '2016-12-31'),\n",
+       " ('2017-01-01', '2019-12-31')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the sample_point_num for each NDVI value"
    ]
   },
   {
@@ -55,15 +91,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate the samplt_point_num for each NDVI value"
+    "##### Step_1: Compute the histogram of NDVI for each Landsat image"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -92,6 +121,8 @@
     "NDVI_hist = {}\n",
     "year_span = []\n",
     "\n",
+    "\n",
+    "# reverse the year_range order so we process the latest year first\n",
     "for span in year_range[::-1]:\n",
     "    \n",
     "    # create name variables from span\n",
@@ -123,6 +154,13 @@
     "    print(f'Histogram calculation of Year_{span_name}_Mean_NDVI completed!')\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -305,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create 50K random sample point and extract NDVI value to it"
+    "##### Step_2: Create 50K random sample point and extract NDVI value to it"
    ]
   },
   {
