--- a/Process_1_GEE_Python_Classification/Sub_Process_3_Data_preparation_Create_Landsat_Sentinel_Cloud_free_image/Create_Landsat_Sentinel_Cloud_Free_Images.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_3_Data_preparation_Create_Landsat_Sentinel_Cloud_free_image/Create_Landsat_Sentinel_Cloud_Free_Images.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,11 +285,19 @@
     "                      .filterDate(*S_t)\\\n",
     "                      .filter(ee.Filter.lt('CLOUDY_PIXEL_PERCENTAGE', 5))\\\n",
     "                      .map(lambda x: maskS2clouds(x))\\\n",
-    "                      .median() for S_t in Sentinel_year_range] \n",
+    "                      .median()\n",
+    "                      .clip(North_China_Plain.geometry()) for S_t in Sentinel_year_range] \n",
     "\n",
     "# add 'Sentinel' to each band name of Sentinel img\n",
     "Sentinel_img = [img.rename([f'Sentinel_{band}' for band in  img.bandNames().getInfo()]) for img in Sentinel_img]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,7 +322,7 @@
     "                                            description = f'Exporting {name}',\n",
     "                                            assetId     = f'{asset_path}/{name}',\n",
     "                                            region      = North_China_Plain.geometry(),\n",
-    "                                            scale       = 30,\n",
+    "                                            scale       = 10,\n",
     "                                            maxPixels   = int(1e13))\n",
     "    \n",
     "    # start task\n",
