--- a/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_3_Feature_selection.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_3_Feature_selection.ipynb
@@ -910,11 +910,13 @@
    "source": [
     "sfs_df_list = []\n",
     "\n",
+    "# loop through each year and use SequentialFeatureSelector to select features\n",
     "for year,df in zip(year_name,feature_df):\n",
     "    \n",
     "    X = df.drop(['Built'],axis=1)\n",
     "    y = df['Built']\n",
     "    \n",
+    "    # instantiate the SFS, where cross_validation folds is 4\n",
     "    sfs = SFS(RandomForestClassifier(n_jobs=-1,\n",
     "                                     n_estimators=50),\n",
     "                                     k_features=20,\n",
@@ -925,6 +927,7 @@
     "                                     cv=4,\n",
     "                                     n_jobs=-1).fit(X,y)\n",
     "    \n",
+    "    # get the accuracy from SFS\n",
     "    sfs_df = pd.DataFrame.from_dict(sfs.get_metric_dict()).T\n",
     "    sfs_df['year'] = [year] * len(sfs_df)\n",
     "    \n",
@@ -1022,7 +1025,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fb946640f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e0fea5a2b0>"
       ]
      },
      "execution_count": 7,
@@ -1046,27 +1049,6 @@
     "plt.figure(figsize=[12,8])\n",
     "sns.lineplot(data = sfs_all,x='index',y = 'avg_score',hue='year')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
