Find the threshold for 10-random classification

--- a/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1396,18 +1396,18 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# # store the acc_df to local drive\n",
-    "# acc_df = pd.concat([Classification_instances_df[['year','seed']],pd.DataFrame(acc)],axis=1)\n",
-    "# acc_df.to_csv('./Result/Randome_Control_Accuracy_tree_50.csv',index=False)\n",
+    "# store the acc_df to local drive\n",
+    "acc_df = pd.concat([Classification_instances_df[['year','seed']],pd.DataFrame(acc)],axis=1)\n",
+    "acc_df.to_csv('./Result/Classification_Accuracy.csv',index=False)\n",
     "\n",
     "# access the acc_df\n",
-    "acc_df = pd.read_csv('./Result/Randome_Control_Accuracy_tree_50.csv')\n",
+    "acc_df = pd.read_csv('./Result/Classification_Accuracy.csv')\n",
     "acc_df"
    ]
   },
