--- a/Process_2_Temporal_Check/Temporal_Check.ipynb
+++ b/Process_2_Temporal_Check/Temporal_Check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# append upper folder into sys-path during run time so we can\n",
     "# import our own moduls\n",
-    "sys.path.append('../Process_2_GEE_Python_Classification/')\n",
+    "sys.path.append('../Process_1_GEE_Python_Classification/')\n",
     "\n",
     "# import the temporal_consistency_check class\n",
     "from BackGround_modules.Class_5_Temporal_consistency_check import Temporal_consistency_check"
@@ -70,51 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define basic parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the tranning points\n",
-    "Traning_pts = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Sentinel_2017_2019\")"
+    "# define basic parameters\n",
+    "year_range = [f'{i}_{i+2}' for i in range(1990,2020,3)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define the names of each period\n",
-    "year_range = list(f'{i[0]}_{i[1]}' for i in zip(range(1990,2018,3),range(1992,2020,3)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -132,19 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the classified_random_imgs and sum them up for each period\n",
-    "Classified_Landsat_1990_2019 = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Control_{year}\")\n",
+    "# import the classified imgs\n",
+    "Classified_Landsat_1990_2019  = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Control_{year}\")\n",
     "                                  .sum().gte(8).set('name',year)   for year in year_range]\n",
     "\n",
     "Classified_Sentinel_2014_2019 = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Sentinel_Landsat_{year}\")\n",
-    "                                  .sum().gte(8).set('name',year)   for year in year_range[-2:]]\n",
-    "\n",
-    "# combine classification img together\n",
-    "Classified_imgs = Classified_Landsat_1990_2019[:-2] + Classified_Sentinel_2014_2019"
+    "                                  .sum().gte(8).set('name',year)   for year in year_range[-2:]]"
    ]
   },
   {
@@ -156,21 +115,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the temporal_flag to indicate weather to use Sentinel classified imgs\n",
+    "\n",
+    "temporal_flag = 'Landsat' #'Landsat'/'Sentinel'\n",
+    "\n",
+    "# decide which classified img to be used\n",
+    "if temporal_flag == 'Landsat':\n",
+    "    Classified_imgs = Classified_Landsat_1990_2019\n",
+    "    \n",
+    "elif temporal_flag == 'Sentinel':\n",
+    "    Classified_imgs = Classified_Landsat_1990_2019[:-2] + Classified_Sentinel_2014_2019\n",
+    "\n",
+    "else:\n",
+    "    print('Incorrect temporal_flag!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ee.image.Image at 0x1ca14547390>,\n",
+       " <ee.image.Image at 0x1ca14547518>,\n",
+       " <ee.image.Image at 0x1ca14547668>,\n",
+       " <ee.image.Image at 0x1ca145477b8>,\n",
+       " <ee.image.Image at 0x1ca14547908>,\n",
+       " <ee.image.Image at 0x1ca14547a58>,\n",
+       " <ee.image.Image at 0x1ca14547ba8>,\n",
+       " <ee.image.Image at 0x1ca14547cf8>,\n",
+       " <ee.image.Image at 0x1ca14547e48>,\n",
+       " <ee.image.Image at 0x1ca14547f98>]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Classified_imgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check length is    ---> 3\n",
-      "Check weights is   ---> [3, 1, 1]\n",
-      "Check threshold is ---> 4\n"
+      "Check length is    ---> 4\n",
+      "Check weights is   ---> [4, 1, 1, 1]\n",
+      "Check threshold is ---> 6\n"
      ]
     }
    ],
    "source": [
-    "Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,3,10).Iterate_the_check()"
+    "Iter_temporal_check_instaces = Temporal_consistency_check(Classified_imgs,4,10).Iterate_the_check()"
    ]
   },
   {
@@ -182,13 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b61b6ef2e17f465eab271f4a72181f3e",
+       "model_id": "a026468cb3e94006a130b817b35c899e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +255,7 @@
     "Map = geemap.Map()\n",
     "Map.setCenter(115.4508, 35.2492,10)\n",
     "\n",
-    "year_idx = 3\n",
+    "year_idx = 9\n",
     "\n",
     "Map.add_basemap('HYBRID')\n",
     "Map.addLayer(Classified_imgs[year_idx] ,{'min':0,'max':1},'origin')\n",
