Determine the sample size

--- a/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_2_Determine the best tree number.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_2_Determine the best tree number.ipynb
@@ -10,7 +10,10 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -550,11 +553,9 @@
     "    y = fe['Built']\n",
     "\n",
     "    # appliy RandomForestClassifier \n",
-    "    from sklearn.ensemble import RandomForestClassifier\n",
     "    classifier = RandomForestClassifier()\n",
     "    \n",
     "    # Use gridSearch\n",
-    "    from sklearn.model_selection import GridSearchCV\n",
     "    param_grid = dict(n_estimators = range(1,121))    \n",
     "    grid = GridSearchCV(classifier,param_grid,cv=5,scoring='accuracy',n_jobs=-1,verbose=10)\n",
     "    grid.fit(X,y)\n",
