--- a/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_2_Classification_Sentinel_random_split_10_layers.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_2_Classification_Sentinel_random_split_10_layers.ipynb
@@ -138,43 +138,8 @@
    "outputs": [],
    "source": [
     "# prepare the climate data\n",
-    "Climate_type = ['lrad','prec','pres','shum','srad','temp','wind']\n",
-    "Climate_mean = []\n",
-    "\n",
-    "for year in year_name:   \n",
-    "    \n",
-    "    # define the three years according to year-variable\n",
-    "    year_start = int(year.split('_')[0])\n",
-    "    year_mid   = year_start + 1\n",
-    "    year_end   = year_start + 2\n",
-    "    \n",
-    "    # Initiate an empty list to hold the climate-tifs-mean from year_start to year_end\n",
-    "    climate_tifs_mean = []\n",
-    "    \n",
-    "    # compute the mean-tif of each climate-type\n",
-    "    for i in Climate_type:\n",
-    "\n",
-    "        # Because cliate_data doesn't include data of 2019, so \n",
-    "        # use if to exclede the data of year 2019\n",
-    "        if year_start < 2017:\n",
-    "            climate_tifs = [ee.Image(f\"users/wangjinzhulala/North_China_Plain_Python/Climate_data/{i}/{i}_{t}\")                        \n",
-    "                            for t in [year_start,year_mid,year_end]]\n",
-    "            tifs_mean    = ee.ImageCollection(climate_tifs).mean().toFloat().rename(i)\n",
-    "\n",
-    "        else:\n",
-    "            climate_tifs = [ee.Image(f\"users/wangjinzhulala/North_China_Plain_Python/Climate_data/{i}/{i}_{t}\")                        \n",
-    "                            for t in [year_start,year_mid]]\n",
-    "\n",
-    "            tifs_mean    = ee.ImageCollection(climate_tifs).mean().toFloat().rename(i)\n",
-    "\n",
-    "        # add all climate_tifs_mean of year_start to year_end to list\n",
-    "        climate_tifs_mean.append(tifs_mean)\n",
-    "        \n",
-    "        climate_tifs_mean_img = ee.Image(climate_tifs_mean)\n",
-    "        \n",
-    "\n",
-    "    # add the mean-cliamte-img into the Climate_mean\n",
-    "    Climate_mean.append(climate_tifs_mean_img)"
+    "Climate_mean = [ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Climate_data/Mean_1990_1992\")\n",
+    "               .clip(North_China_Plain)  for year in year_name]"
    ]
   },
   {
@@ -253,7 +218,8 @@
    "source": [
     "# import Landsat img\n",
     "Landsat_img = [ee.Image(f\"users/wang8052664/Cloud_Free_Img/Landsat_cloud_free_{t}\") for t in year_name]\n",
-    "# here add a 'Landsat' befor the name of each landsat band so to avoid duplicated names to Sentinel bands\n",
+    "\n",
+    "# here add a 'Landsat' before the name of each landsat band so to avoid duplicated names to Sentinel bands\n",
     "Landsat_img = [img.rename([f'Landsat_{band}' for band in  img.bandNames().getInfo()]) for img in Landsat_img]"
    ]
   },
@@ -418,11 +384,11 @@
     "                                    geometries = True,\n",
     "                                    tileScale  = 2)\n",
     "\n",
-    "    # exporting\n",
-    "    task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
-    "                                            description = f'{name}_{t}',\n",
-    "                                            assetId     = f'{path}/{name}_{t}')\n",
-    "    task.start()\n",
+    "#     # exporting\n",
+    "#     task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
+    "#                                             description = f'{name}_{t}',\n",
+    "#                                             assetId     = f'{path}/{name}_{t}')\n",
+    "#     task.start()\n",
     "\n",
     "\n",
     "    # print out the process\n",
@@ -452,31 +418,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the training sample\n",
-    "path   = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized_Climate'\n",
-    "Training_sample =[ee.FeatureCollection(f\"{path}/Re_inspect_sample_Landsat_ext_img_{t}\") for t in year_name]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the training sample with Sentinel values\n",
     "path_sent = 'users/wangjinzhulala/North_China_Plain_Python/Sample_extract_img'\n",
-    "Tarining_sample_sent = [ee.FeatureCollection(f\"{path_sent}/Sentinel_Landsat_reinspect_sample_ext_img_{t}\") \n",
+    "\n",
+    "# Here we use a random colum to select 3/4 of the sample points for classification/assessment\n",
+    "# and leave 1/4 that keep untouched for later accuracy comparision\n",
+    "Tarining_sample_sent = [ee.FeatureCollection(f\"{path_sent}/Sentinel_Landsat_reinspect_sample_ext_img_{t}\")\\\n",
+    "                          .randomColumn('split', 101)\\\n",
+    "                          .filterMetadata('split','greater_than',0.25)\n",
     "                        for t in [\"2017_2019\",\"2014_2016\"]]"
    ]
   },
