--- a/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_6_Before_classification_Feature_selection/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,22 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "ee.Initialize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# append upper folder into sys-path during run time so we can\n",
-    "# import our own moduls\n",
-    "sys.path.append('..')"
    ]
   },
   {
@@ -59,13 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the num of different sample points\n",
-    "num_invarient = 10\n",
-    "\n",
     "# define the year range\n",
     "year_start = [i for i in range(1990,2018,3)]\n",
     "year_end   = [i for i in range(1992,2020,3)]\n",
@@ -75,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +88,7 @@
        " '2017_2019']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,8 +147,8 @@
     "               .clip(North_China_Plain)  for year in year_name]\n",
     "\n",
     "# Import DEM/SLOPE Img\n",
-    "DEM   = [ee.Image(\"USGS/SRTMGL1_003\").rename('DEM')] * num_invarient\n",
-    "SLOPE = [ee.Terrain.slope(DEM).rename('SLOPE')] * num_invarient"
+    "DEM   = [ee.Image(\"USGS/SRTMGL1_003\").rename('DEM')] * len(Landsat_img)\n",
+    "SLOPE = [ee.Terrain.slope(DEM).rename('SLOPE')] * len(Landsat_img)"
    ]
   },
   {
@@ -174,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
