--- a/Process_1_GEE_Python_Classification/Sub_Process_8_Determine_the_threshold_for_the_sum_of_10_random_classification/Threshold_For_sum_of_10_random_classifications.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_8_Determine_the_threshold_for_the_sum_of_10_random_classification/Threshold_For_sum_of_10_random_classifications.ipynb
@@ -43,13 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define basic parameters\n",
     "year_span = [f'{i}_{i+2}' for i in range(1990,2020,3)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +276,7 @@
        "Sentinel_2017_2019        2017  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +502,7 @@
        "[120 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +677,7 @@
     "\n",
     "for idx,row in Threshold_acc_df.iterrows():\n",
     "    \n",
-    "    # If the 'Built' and 'classification' attribute are same, then this will be correct classified point\n",
+    "    # If the 'Built' and 'classification' attribute are same, then it will be a correct classified point\n",
     "    correct_num = row[2].filter(ee.Filter.equals('Built',None,'classification')).size().getInfo()\n",
     "    correct_num_list.append(correct_num)\n",
     "    \n",
@@ -705,12 +712,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save df to disk\n",
-    "Threshold_acc_df.to_csv('./Result/Threshold_acc_df.csv',index=False)\n",
+    "# # save df to disk\n",
+    "# Threshold_acc_df.to_csv('./Result/Threshold_acc_df.csv',index=False)\n",
     "\n",
     "# read data\n",
     "Threshold_acc_df = pd.read_csv('./Result/Threshold_acc_df.csv')"
@@ -732,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,16 +749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24b26302f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b6bcca6ac8>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -789,16 +796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24b2374e4e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b6bf000a20>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
