Accuracy of temporal check

--- a/Process_2_Temporal_Check/Temporal_Check.ipynb
+++ b/Process_2_Temporal_Check/Temporal_Check.ipynb
@@ -1091,7 +1091,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1333,9 +1333,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/260 finished!\n",
+      "20/260 finished!\n",
+      "30/260 finished!\n",
+      "40/260 finished!\n",
+      "50/260 finished!\n",
+      "60/260 finished!\n",
+      "70/260 finished!\n",
+      "80/260 finished!\n",
+      "90/260 finished!\n",
+      "100/260 finished!\n",
+      "110/260 finished!\n",
+      "120/260 finished!\n",
+      "130/260 finished!\n",
+      "140/260 finished!\n",
+      "150/260 finished!\n"
+     ]
+    }
+   ],
    "source": [
-    "chunk_size = 25\n",
+    "chunk_size = 10\n",
     "correct_num_list = []\n",
     "\n",
     "# chop the featurecollection into several sub-list, so we can apply map function\n",
